pkg/xds/generator/testdata/outbound-proxy/04.envoy.golden.yaml
resources:
- name: api-http
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: api-http
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://mesh1/api-http
                sanType: URI
            validationContextSdsSecretConfig:
              name: mesh_ca:secret:mesh1
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: identity_cert:secret:mesh1
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: api-http{mesh=mesh1}
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: api-tcp
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    lbPolicy: LEAST_REQUEST
    leastRequestLbConfig:
      choiceCount: 4
    name: api-tcp
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://mesh1/api-tcp
                sanType: URI
            validationContextSdsSecretConfig:
              name: mesh_ca:secret:mesh1
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: identity_cert:secret:mesh1
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: api-tcp{mesh=mesh1}
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: backend
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    lbPolicy: MAGLEV
    name: backend
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://mesh1/backend
                sanType: URI
            validationContextSdsSecretConfig:
              name: mesh_ca:secret:mesh1
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: identity_cert:secret:mesh1
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: backend{mesh=mesh1}
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: db-c182dd9f4bf584d7
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: db-c182dd9f4bf584d7
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://mesh1/db
                sanType: URI
            validationContextSdsSecretConfig:
              name: mesh_ca:secret:mesh1
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: identity_cert:secret:mesh1
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: db{mesh=mesh1,role=replica}
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: db-f7d9086d4169338b
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: db-f7d9086d4169338b
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://mesh1/db
                sanType: URI
            validationContextSdsSecretConfig:
              name: mesh_ca:secret:mesh1
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: identity_cert:secret:mesh1
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: db{mesh=mesh1,role=master}
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: api-http
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: api-http
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.4
              portValue: 8084
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              kuma.io/protocol: http
              region: us
            envoy.transport_socket_match:
              kuma.io/protocol: http
              region: us
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.5
              portValue: 8085
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              kuma.io/protocol: http
              region: eu
            envoy.transport_socket_match:
              kuma.io/protocol: http
              region: eu
- name: api-tcp
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: api-tcp
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.6
              portValue: 8086
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              kuma.io/protocol: http
              region: us
            envoy.transport_socket_match:
              kuma.io/protocol: http
              region: us
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.7
              portValue: 8087
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              region: eu
            envoy.transport_socket_match:
              region: eu
- name: backend
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: backend
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.1
              portValue: 8081
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              region: us
            envoy.transport_socket_match:
              region: us
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.2
              portValue: 8082
        loadBalancingWeight: 1
- name: db-c182dd9f4bf584d7
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: db-c182dd9f4bf584d7
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.3
              portValue: 5433
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              role: replica
            envoy.transport_socket_match:
              role: replica
- name: db-f7d9086d4169338b
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: db-f7d9086d4169338b
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.3
              portValue: 5432
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              role: master
            envoy.transport_socket_match:
              role: master
- name: outbound:127.0.0.1:18080
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 18080
    bindToPort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: backend
          statPrefix: backend
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: backend
    name: outbound:127.0.0.1:18080
    trafficDirection: OUTBOUND
- name: outbound:127.0.0.1:40001
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 40001
    bindToPort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 9.10.11.12
              prefixLen: 12
            - addressPrefix: 127.0.0.6
              prefixLen: 8
          routeConfig:
            name: outbound:api-http
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: api-http
              routes:
              - match:
                  prefix: /
                route:
                  cluster: api-http
                  timeout: 0s
          statPrefix: api-http
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: api-http
    name: outbound:127.0.0.1:40001
    trafficDirection: OUTBOUND
- name: outbound:127.0.0.1:40002
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 40002
    bindToPort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: api-tcp
          statPrefix: api-tcp
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: api-tcp
    name: outbound:127.0.0.1:40002
    trafficDirection: OUTBOUND
- name: outbound:127.0.0.1:54321
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 54321
    bindToPort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          statPrefix: db
          weightedClusters:
            clusters:
            - name: db-f7d9086d4169338b
              weight: 10
            - name: db-c182dd9f4bf584d7
              weight: 90
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: db
    name: outbound:127.0.0.1:54321
    trafficDirection: OUTBOUND
