pkg/xds/generator/testdata/outbound-proxy/05.envoy.egress.golden.yaml
resources:
- name: es-_0_
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 10s
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: es
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchSubjectAltNames:
              - exact: spiffe://mesh1/zone-egress
            validationContextSdsSecretConfig:
              name: mesh_ca:secret:mesh1
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: identity_cert:secret:mesh1
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: es{kuma.io/protocol=http,mesh=mesh1}
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        commonHttpProtocolOptions:
          idleTimeout: 0s
        explicitHttpConfig:
          httpProtocolOptions: {}
- name: es
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: es
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.1.1
              portValue: 10002
        loadBalancingWeight: 1
- name: outbound:127.0.0.1:18081
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 18081
    bindToPort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
          routeConfig:
            name: outbound:es
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: es
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: es-_0_
          statPrefix: es
    name: outbound:127.0.0.1:18081
    trafficDirection: OUTBOUND
