pkg/xds/generator/testdata/outbound-proxy/06.envoy.golden.yaml
resources:
- name: es2-ff6df687ce12e5f4
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    loadAssignment:
      clusterName: es2-ff6df687ce12e5f4
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 10.0.0.2
                portValue: 10002
          loadBalancingWeight: 1
          metadata:
            filterMetadata:
              envoy.lb:
                kuma.io/protocol: http2
              envoy.transport_socket_match:
                kuma.io/protocol: http2
    name: es2-ff6df687ce12e5f4
    type: STATIC
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: outbound:127.0.0.1:18082
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 18082
    bindToPort: false
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 9.10.11.12
              prefixLen: 12
            - addressPrefix: 127.0.0.6
              prefixLen: 8
          routeConfig:
            name: outbound:es2
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: es2
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: es2-ff6df687ce12e5f4
                  timeout: 0s
          statPrefix: es2
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: es2
    name: outbound:127.0.0.1:18082
    trafficDirection: OUTBOUND
