pkg/xds/generator/testdata/outbound-proxy/07.envoy.golden.yaml
resources:
- name: backend
  resource:
    '@type': type.googleapis.com/envoy.api.v2.Cluster
    connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
    name: backend
    type: EDS
- name: backend
  resource:
    '@type': type.googleapis.com/envoy.api.v2.ClusterLoadAssignment
    clusterName: backend
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.1
              portValue: 8081
        metadata:
          filterMetadata:
            envoy.lb:
              region: us
              service: backend
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.2
              portValue: 8082
- name: outbound:127.0.0.1:18080
  resource:
    '@type': type.googleapis.com/envoy.api.v2.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 18080
    filterChains:
    - filters:
      - name: envoy.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
          cluster: backend
          statPrefix: backend
    name: outbound:127.0.0.1:18080
- name: db
  resource:
    '@type': type.googleapis.com/envoy.api.v2.Cluster
    connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
    name: db
    type: EDS
- name: db
  resource:
    '@type': type.googleapis.com/envoy.api.v2.ClusterLoadAssignment
    clusterName: db
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.3
              portValue: 5432
        metadata:
          filterMetadata:
            envoy.lb:
              role: master
              service: db
- name: outbound:127.0.0.1:54321
  resource:
    '@type': type.googleapis.com/envoy.api.v2.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 54321
    filterChains:
    - filters:
      - name: envoy.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
          cluster: db
          statPrefix: db
    name: outbound:127.0.0.1:54321
