pkg/xds/generator/testdata/outbound-proxy/09.envoy.golden.yaml
resources:
- name: api-http-5637c619d2781fec_mesh2
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: api-http-5637c619d2781fec_mesh2
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - kuma
          combinedValidationContext:
            defaultValidationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: spiffe://mesh2/api-http
                sanType: URI
            validationContextSdsSecretConfig:
              name: mesh_ca:secret:mesh2
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          tlsCertificateSdsSecretConfigs:
          - name: identity_cert:secret:mesh1
            sdsConfig:
              ads: {}
              resourceApiVersion: V3
        sni: api-http{mesh=mesh2}
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: api-http-5637c619d2781fec_mesh2
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: api-http-5637c619d2781fec_mesh2
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.6
              portValue: 8086
        loadBalancingWeight: 1
        metadata:
          filterMetadata:
            envoy.lb:
              kuma.io/protocol: http
              region: eu
            envoy.transport_socket_match:
              kuma.io/protocol: http
              region: eu
- name: outbound:127.0.0.1:30001
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 30001
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 9.10.11.12
              prefixLen: 12
            - addressPrefix: 127.0.0.6
              prefixLen: 8
          routeConfig:
            name: outbound:api-http
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: api-http
              routes:
              - match:
                  prefix: /
                route:
                  cluster: api-http-5637c619d2781fec_mesh2
                  timeout: 0s
          statPrefix: api-http
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: api-http
    name: outbound:127.0.0.1:30001
    trafficDirection: OUTBOUND
