pkg/xds/generator/testdata/outbound-proxy/cluster-dots.envoy.golden.yaml
resources:
- name: backend.kuma-system
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    altStatName: backend_kuma-system
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: backend.kuma-system
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: db-104dbb63d60dfdfa
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: db-104dbb63d60dfdfa
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          http2ProtocolOptions: {}
- name: backend.kuma-system
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: backend.kuma-system
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.1
              portValue: 8082
        loadBalancingWeight: 1
- name: db-104dbb63d60dfdfa
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: db-104dbb63d60dfdfa
- name: outbound:127.0.0.1:18080
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 18080
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: backend.kuma-system
          statPrefix: backend_kuma-system
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: backend.kuma-system
    name: outbound:127.0.0.1:18080
    trafficDirection: OUTBOUND
- name: outbound:127.0.0.1:54321
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 54321
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: db-104dbb63d60dfdfa
          statPrefix: db_kuma-system
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: db.kuma-system
    name: outbound:127.0.0.1:54321
    trafficDirection: OUTBOUND
