pkg/xds/generator/testdata/outbound-proxy/dataplane.1.transparent.input.yaml
networking:
  transparentProxying:
    redirectPort: 15001
  outbound:
  - interface: :18080
    service: backend
