pkg/xds/generator/testdata/outbound-proxy/dataplane.2.non-transparent.input.yaml
networking:
networking:
  outbound:
  - interface: :18080
    service: backend
  - interface: :54321
    service: db
